--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body, header, #intro {
 }
 
 #intro {
-    background: url("http://chuantu.xyz/t6/740/1597895090x992245926.jpg") 
+    background: url("https://s1.ax1x.com/2020/08/21/dYwY6K.jpg") 
     no-repeat center center fixed;
     background-size: cover; 
 }
